k8s/base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: hfts-web:dev
          ports:
            - containerPort: 10001
          livenessProbe:
            httpGet:
              path: /health
              port: 10001
            periodSeconds: 10
            failureThreshold: 3
            initialDelaySeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 10001
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
            initialDelaySeconds: 3
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "50m"
