k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 10002
      targetPort: 10002
