k8s/base/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
