k8s/base/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
