k8s/base/renderer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renderer
spec:
  selector:
    app: renderer
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
