k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 10001
      targetPort: 10001
