k8s/base/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
spec:
  selector:
    app: worker
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 10003
      targetPort: 10003
